memory/build/mozmemory_wrap.cpp
@@ -10,6 +10,8 @@
 
 // Declare malloc implementation functions with the right return and
 // argument types.
+#define NOTHROW_MALLOC_DECL(name, return_type, ...) \
+  MOZ_MEMORY_API return_type name##_impl(__VA_ARGS__) noexcept(true);
 #define MALLOC_DECL(name, return_type, ...) \
   MOZ_MEMORY_API return_type name##_impl(__VA_ARGS__);
 #define MALLOC_FUNCS MALLOC_FUNCS_MALLOC
